[metadata]
name = Konomi
version = 0.0.0.0
author = Kono
author_email = ------
description = Easily create a bot for Amino Apps using a modern easy to use synchronous library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Konoyoi/Konomi
license = MIT
keywords = []
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires = 
	requests==2.28.2
	colorama==0.4.6
	websocket-client==1.4.1
python_requires = >=3.8

[egg_info]
tag_build = 
tag_date = 0
